Refactor API to be more standard compliant/understandable.
