# docs/API_spec.yml
@@ -2,21 +2,21 @@ openapi: "3.0.2"
 info:
   title: "swift-x-account-sharing"
   description: "Database and API for storing / querying Openstack Swift ACL information"
-  version: "0.1.0"
+  version: "0.1.1"
   license:
     name: MIT
 tags:
   - name: API Endpoints
     description: Endpoints for sharing information queries
 paths:
-  /has-access:
+  /access/{user}:
     get:
       tags:
         - API Endpoints
       summary: List container names that have been shared to the user.
       parameters:
       - name: user
-        in: query
+        in: path
         description: The user querying
         schema:
           type: string
@@ -28,22 +28,22 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/HasAccess"
-        401:
-         description: Unauthorized
-  /access-details:
+        400:
+          description: Client Error
+  /access/{user}/{container}:
     get:
       tags:
         - API Endpoints
       summary: Get details of a container that has been shared to the user.
       parameters:
       - name: container
-        in: query
+        in: path
         description: The container that is to be queried.
         schema:
           type: string
           example: test-container-1
       - name: user
-        in: query
+        in: path
         description: The user querying
         schema:
           type: string
@@ -61,17 +61,16 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/GetDetails"
-        401:
-          description: Unauthorized
-        404:
-          description: Not Found
-  /gave-access:
+        400:
+          description: Client Error
+  /share/{user}:
     get:
       tags:
         - API Endpoints
       summary: List container names that the user has shared to someone else.
       parameters:
       - name: user
+        in: path
         description: The user requesting the shared container listing.
         schema:
           type: string
@@ -83,22 +82,22 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/GaveAccess"
-        401:
-          description: Unauthorized
-  /shared-details:
+        400:
+          description: Client Error
+  /share/{user}/{container}:
     get:
       tags:
         - API Endpoints
       summary: Get details of a container that the user has shared.
       parameters:
       - name: container
-        in: query
+        in: path
         description: The container that is to be queried.
         schema:
           type: string
           example: test-container-1
       - name: user
-        in: query
+        in: path
         description: The user that is requesting the sharing details.
         schema:
           type: string
@@ -110,18 +109,16 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/SharedDetails"
-        401:
-          description: Unauthorized
-        404:
-          description: Not Found
-  /share-container:
+        400:
+          description: Client Error
+  /share/{user}/{container}:
     post:
       tags:
         - API Endpoints
-      summary: Grant specified access to container to the user/users specified in the query.
+      summary: Give user / users access rights on a specified container.
       parameters:
       - name: container
-        in: query
+        in: path
         description: The container that is to be shared.
         schema:
           type: string
@@ -139,7 +136,7 @@ paths:
           type: string
           example: "r,l,w"
       - name: owner
-        in: query
+        in: path
         description: The owner of the container to be shared.
         schema:
           type: string
@@ -151,20 +148,61 @@ paths:
           type: string
           example: "https://example-obj-store.os-example.com:443/swift/v1/AUTH_example/test-container-1"
       responses:
-        204:
+        200:
           description: OK
-        401:
-          description: Unauthorized
-        404:
-          description: Not Found
-  /unshare-container:
-    post:
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SharedDetails"
+        400:
+          description: Client Error
+  /share/{user}/{container}:
+    patch:
+      tags:
+        - API Endpoints
+      summary: Edit specified user's access rights on a specified container.
+      parameters:
+      - name: container
+        in: path
+        description: The container that is to be edited.
+        schema:
+          type: string
+          example: test-container-1
+      - name: user
+        in: query
+        description: The user / users that the container is shared to.
+        schema:
+          type: string
+          example: "AUTH_user1,AUTH_user2,AUTH_user3,AUTH_user4"
+      - name: access
+        in: query
+        description: The access types to be granted.
+        schema:
+          type: string
+          example: "r,l,w"
+      - name: owner
+        in: path
+        description: The owner of the container to be edited.
+        schema:
+          type: string
+          example: AUTH_example
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SharedDetails"
+        400:
+          description: Client Error
+  /share/{user}/{container}:
+    delete:
       tags:
         - API Endpoints
       summary: Revoke specified access to container from the user/users specified in the query.
       parameters:
       - name: container
-        in: query
+        in: path
         description: The container that is to be revoked.
         schema:
           type: string
@@ -175,19 +213,19 @@ paths:
         schema:
           type: string
           example: "user1,user2,user3,user4"
-      - name: access
-        in: query
-        description: The access types to be revoked.
+      - name: owner
+        in: path
+        description: The owner of the shared container.
         schema:
           type: string
-          example: "r,l,w"
+          example: test-container-1
       responses:
         204:
           description: OK
-        401:
-          description: Unauthorized
         404:
           description: Not Found
+        400:
+          description: Client Error
 
 components:
   schemas:
