# swift_x_account_sharing/api.py
@@ -10,9 +10,9 @@ async def has_access_handler(request):
 
     # Check for incorrect client query here
 
-    access_list = request.app["db_conn"].get_access_list(request.query["user"])
-    if not access_list:
-        raise aiohttp.web.HTTPNotFound()
+    access_list = request.app["db_conn"].get_access_list(
+        request.match_info["user"]
+    )
     return aiohttp.web.json_response(access_list)
 
 
@@ -23,12 +23,10 @@ async def access_details_handler(request):
     # Check for incorrect client query here
 
     access_details = request.app["db_conn"].get_access_container_details(
-        request.query["user"],
+        request.match_info["user"],
         request.query["owner"],
-        request.query["container"]
+        request.match_info["container"]
     )
-    if not access_details:
-        raise aiohttp.web.HTTPNotFound()
     return aiohttp.web.json_response(access_details)
 
 
@@ -39,10 +37,8 @@ async def gave_access_handler(request):
     # Check for incorrect client query here
 
     shared_list = request.app["db_conn"].get_shared_list(
-        request.query["user"]
+        request.match_info["owner"]
     )
-    if not shared_list:
-        raise aiohttp.web.HTTPNotFound()
     return aiohttp.web.json_response(shared_list)
 
 
@@ -53,11 +49,9 @@ async def shared_details_handler(request):
     # Check for incorrect client query here
 
     shared_details = request.app["db_conn"].get_shared_container_details(
-        request.query["user"],
-        request.query["container"]
+        request.match_info["owner"],
+        request.match_info["container"]
     )
-    if not shared_details:
-        raise aiohttp.web.HTTPNotFound()
     return aiohttp.web.json_response(shared_details)
 
 
@@ -68,8 +62,8 @@ async def share_container_handler(request):
     # Check for incorrect client query here
 
     request.app["db_conn"].add_share(
-        request.query["owner"],
-        request.query["container"],
+        request.match_info["owner"],
+        request.match_info["container"],
         request.query["user"].split(","),
         request.query["access"].split(","),
         request.query["address"]
@@ -81,18 +75,36 @@ async def share_container_handler(request):
     )
 
 
-async def unshare_container_handler(request):
+async def edit_share_handler(request):
+    """Handle container shared rights editions."""
+    # Future authorization check here
+
+    # Check for incorrect client query here
+
+    edited = request.app["db_conn"].edit_share(
+        request.match_info["owner"],
+        request.match_info["container"],
+        request.query["user"].split(","),
+        request.query["access"].split(",")
+    )
+
+    return aiohttp.web.json_response(edited)
+
+
+async def delete_share_handler(request):
     """Handle unshare-container endpoint query."""
     # Future authorization check here
 
     # Check for incorrect client query here
 
-    request.app["db_conn"].remove_share(
-        request.query["owner"],
-        request.query["container"],
-        request.query["user"].split(","),
-        request.query["access"].split(",")
+    deleted = request.app["db_conn"].delete_share(
+        request.match_info["owner"],
+        request.match_info["container"],
+        request.query["user"].split(",")
     )
+
+    if not deleted:
+        raise aiohttp.web.HTTPNotFound()
 
     return aiohttp.web.Response(
         status=204,
